# USTC_MM_26

./: .gitignore  README.md  test_seam.py  test_seam2.py
homework1_sir_model/: README.md
homework1_sir_model/src/: main.py  seir_model.py  sir_model.py
homework2_portfolio_optimization/: README.md
homework2_portfolio_optimization/src/: black_litterman.py  mean_variance.py  risk_parity.py
homework3_optimization_algorithms/: README.md
homework3_optimization_algorithms/src/: adaptive_methods.py  gradient_descent.py  newton_method.py
homework4_network_analysis/: README.md
homework4_network_analysis/src/: diffusion_models.py  pagerank.py
homework5_time_series/: README.md
homework5_time_series/src/: arima_model.py  backtest.py  indicators.py  kalman_filter.py  lstm_model.py
hw2/: README.md
hw_1/: README.md
hw_1/op_1/: README.md  main.tex
hw_1/op_1/code_template_cpp/: CMakeLists.txt  main.cpp
hw_1/op_2/: README.md
hw_1/op_2/code_template_cpp/: CMakeLists.txt  main.cpp  metro_algorithm.cpp  metro_algorithm.h  metro_gui.cpp  metro_gui.h
hw_1/op_3/: README.md
hw_2/: README.md
hw_2/option1/: BUILD_INSTRUCTIONS.md  README.md  compress.py  metrics.py  refer.bib  report.md  report.tex  svd_impl.py  test_svd.py
hw_3/: insect_nn_option2.py  report_option2.md  胡广理_PB24010500_数学建模昆虫分类.7z
hw_3/.mplconfig/: fontlist-v390.json
hw_3/option2_outputs/: all_runs.csv  metadata.json  (+2 more)
hw_4/: IMPLEMENTATION.md  QUICK_START.md  README.md  SUBMISSION_CHECKLIST.md  WORKSPACE_SUMMARY.txt  deep_ritz.py  examples.py  network.py  refer.bib  report.tex  solver.py
(+18 files in other folders)
